@@ -1,3 +1,5 @@
+* Use login details in title
+
 Version 4.4.0 - 2017-05-01
 * Bug fixes (see mercurial logs for details)
 * Manage help attribute on tree views
